--- a/src/main/resources/assets/obstructum/lang/en_us.json
+++ b/src/main/resources/assets/obstructum/lang/en_us.json
@@ -6,5 +6,6 @@
     "obstructum.chest": "This Chest is obstructed",
     "obstructum.ender_chest": "This Ender Chest is obstructed",
     "obstructum.villager_trade": "Cannot trade with this Villager",
-    "obstructum.cake": "Cannot eat cake"
+    "obstructum.cake": "Cannot eat cake",
+    "obstructum.waxed_sign": "Cannot edit waxed sign"
 }
